<?xml version="1.0"?>
<package format="2">
  <name>config_utilities</name>
  <version>0.0.0</version>
  <description>Tools for unified and simple config structs. </description>

  <author email="schmluk@mavt.ethz.ch">Lukas Schmid</author>

  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <export>
  </export>
</package>
